# george

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  readme.md
.github/workflows/: end-to-end-tests.yml  rust.yml  verify-george-client.yml  verify-george-daemon.yml  verify-george.yml
demos/: 2024-11-02.mov
end-to-end/: Cargo.toml
end-to-end-server/: Cargo.toml
end-to-end-server/src/: main.rs
end-to-end-tests/: Cargo.toml
end-to-end-tests/src/: main.rs
end-to-end/chat/: main.rs
end-to-end/server/: main.rs
end-to-end/src/: main.rs
george/: Cargo.toml
george-ai/: Cargo.toml  Dockerfile  readme.md
george-ai/george-daemon/src/routes/: health_route.rs  mod.rs
george-ai/src/: virtual_machine.rs
george-client/: Cargo.toml  Dockerfile
george-client/src/: main.rs
george-client/src/routes/: click_route.rs  mod.rs  screenshot_route.rs  type_route.rs
george-daemon/: Cargo.toml  Dockerfile  readme.md
george-daemon/src/: main.rs
george-daemon/src/routes/: root_route.rs  screenshot_route.rs
george/george-daemon/: Dockerfile
george/george-daemon/src/: main.rs
george/george-daemon/src/routes/: mod.rs
george/src/: daemon.rs  daemon_output.rs  lib.rs  main.rs  virtual_machine.rs
notes/: 2024-10-20.md  2024-10-21.md
scripts/: build-george-daemon.sh  runner-always-running-ubuntu.sh  start-molmo.sh  stop-molmo.sh  ubuntu-runner-setup.sh  vllm-install-deps.sh  xvfb-always-running-on-ubuntu.sh
