[package]
name = "george-client"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.2.1"
screenshots = "0.8.10"


[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }