[package]
name = "george"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.7.2"
base64 = "0.22.1"
image = "0.25.4"
